@@ -32,6 +32,7 @@
     * MSL pressure is now computed in collecting threads.
     * threads to display data have been improved.
     * replaced loop_forever in MQTT thread by loop_start and loop_stop.
+    * database options are now handled by the weather stations.
 
   * FIXED:
     * few corrections to make the weather station works on raspberry pi.
